gccida/g0/peephole2_2
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57778:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57790:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[6] = x4b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57791:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4c = ( rtx)x3f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57794:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3g = ( rtx)x2a[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57803:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[4] = x5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57804:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4e = ( rtx)x3g[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57810:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[5] = x5a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57820:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = x2n; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57839:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2q; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57846:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2r; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57853:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2s; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57857:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1p = ( rtx)temd[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57863:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[7] = x2t; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57864:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2u = ( rtx)x1p[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57872:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3j = ( rtx)x2u[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57878:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1q = ( rtx)teme[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57884:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[8] = x2v; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57885:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2w = ( rtx)x1q[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/insn-recog.c:57894:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3l = ( rtx)x2w[1]; 
            ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_2/src/obj/insn-recog.o] Error 1
